--- a/HTML_elements/HTML_elements.html
+++ b/HTML_elements/HTML_elements.html
@@ -8,13 +8,13 @@
   <body>
     <h1>HTNL_elements</h1>
     <ul>
-      <li><a href="./Headings.md">HTML標題</a></li>
-      <li><a href="./Paragraphs.md">HTML段落</a></li>
-      <li><a href="./Links.md">HTML鏈接</a></li>
-      <li><a href="./Images.md">HTML圖像</a></li>
-      <li><a href="./Tables.md">HTML表格</a></li>
-      <li><a href="./Lists.md">HTML列表</a></li>
-      <li><a href="./Froms.md">HTML表單</a></li>
+      <li><a href="./Headings.html">HTML標題</a></li>
+      <li><a href="./Paragraphs.html">HTML段落</a></li>
+      <li><a href="./Links.html">HTML鏈接</a></li>
+      <li><a href="./Images.html">HTML圖像</a></li>
+      <li><a href="./Tables.html">HTML表格</a></li>
+      <li><a href="./Lists.html">HTML列表</a></li>
+      <li><a href="./Froms.html">HTML表單</a></li>
     </ul>
   </body>
 </html>
