--- a/HTML_elements/TextFormatting.html
+++ b/HTML_elements/TextFormatting.html
@@ -24,26 +24,53 @@
         </ul>
       </div>
       <div class="item2">
-        <h2>HTML標題</h2>
+        <h2>HTML段落</h2>
         <h3>介紹</h3>
         <ul>
-          <li>The block-level elements in HTML</li>
-          <li>用於標題、副標題</li>
+          <li>The inline elements in HTML</li>
+          <li>用於定義特殊涵義的文本元素</li>
           <li>
-            &lt;h1&gt;定義最重要的標題。<br/>
-            &lt;h6&gt;定義最不重要的標題。<br/>
-            不應用於調整字體大小、粗細，可用CSS調整。
-          </li>
-          <li>用戶在搜尋引擎透過標題來找尋要瀏覽之網頁</li>
         </ul>
         <h3>語法</h3>
         <p>
-          &lt;h1&gt;...&lt;/h1&gt;<br/>
-          &lt;h2&gt;...&lt;/h2&gt;<br/>
-          &lt;h3&gt;...&lt;/h3&gt;<br/>
-          &lt;h4&gt;...&lt;/h4&gt;<br/>
-          &lt;h5&gt;...&lt;/h5&gt;<br/>
-          &lt;h6&gt;...&lt;/h6&gt;<br/>
+          &lt;b&gt;...&lt;/b&gt;<br/>
+          <b>*粗體</b><br/>
+        </p>
+        <p>
+          &lt;strong&gt;...&lt;/strong&gt;<br/>
+          <strong>*粗體(強調)</strong><br/>
+        </p>
+        <p>
+          &lt;i&gt;...&lt;/i&gt;<br/>
+          <i>*斜體(技術術語、想法、另一種語言、短語)</i><br/>
+        </p>
+        <p>
+          &lt;em&gt;...&lt;/em&gt;<br/>
+          <em>*斜體(強調)</em><br/>
+        </p>
+        <p>
+          &lt;mark&gt;...&lt;/mark&gt;<br/>
+          <mark>*將文字標記</mark><br/>
+        </p>
+        <p>
+          &lt;small&gt;...&lt;/small&gt;<br/>
+          <small>*較小的文字</small><br/>
+        </p>
+        <p>
+          &lt;del&gt;...&lt;/del&gt;<br/>
+          <del>*刪除的文字</del><br/>
+        </p>
+        <p>
+          &lt;ins&gt;...&lt;/ins&gt;<br/>
+          <ins>*插入的文字</ins><br/>
+        </p>
+        <p>
+          &lt;sub&gt;...&lt;/sub&gt;<br/>
+          <sub>*下標</sub>文字<br/>
+        </p>
+        <p>
+          &lt;sup&gt;...&lt;/sup&gt;<br/>
+          <sup>*上標</sup>文字<br/>
         </p>
       </div>
     </div>
