--- a/HTML_elements/elements.html
+++ b/HTML_elements/elements.html
@@ -24,27 +24,7 @@
         </ul>
       </div>
       <div class="item2">
-        <h2>HTML標題</h2>
-        <h3>介紹</h3>
-        <ul>
-          <li>The block-level elements in HTML</li>
-          <li>用於標題、副標題</li>
-          <li>
-            &lt;h1&gt;定義最重要的標題。<br/>
-            &lt;h6&gt;定義最不重要的標題。<br/>
-            不應用於調整字體大小、粗細，可用CSS調整。
-          </li>
-          <li>用戶在搜尋引擎透過標題來找尋要瀏覽之網頁</li>
-        </ul>
-        <h3>語法</h3>
-        <p>
-          &lt;h1&gt;...&lt;/h1&gt;<br/>
-          &lt;h2&gt;...&lt;/h2&gt;<br/>
-          &lt;h3&gt;...&lt;/h3&gt;<br/>
-          &lt;h4&gt;...&lt;/h4&gt;<br/>
-          &lt;h5&gt;...&lt;/h5&gt;<br/>
-          &lt;h6&gt;...&lt;/h6&gt;<br/>
-        </p>
+        <h2>HTML嚴謹寫法</h2>
       </div>
     </div>
   </body>
