--- a/HTML_elements/TextFormatting.html
+++ b/HTML_elements/TextFormatting.html
@@ -24,7 +24,7 @@
         </ul>
       </div>
       <div class="item2">
-        <h2>HTML段落</h2>
+        <h2>HTML文本格式</h2>
         <h3>介紹</h3>
         <ul>
           <li>The inline elements in HTML</li>
