--- a/Git.html
+++ b/Git.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="zh-TW">
   <head>
     <meta charset="UTF-8" name="viewport" content="width=device-width,initial-scale=1.0"/>
-    <link rel="stylesheet" href="../notes.css?v1.2" media="screen,projection"/>
+    <link rel="stylesheet" href="./notes.css?v1.2" media="screen,projection"/>
     <title>Git</title>
   </head>
   <body>
@@ -20,6 +20,10 @@
       <p>git pull</p>
       <p>git push origin [BRANCH_NAME]</p>
       <p>git branch</p>
+      <p>git branch [BRANCH_NAME]</p>
+      <p>git checkout [BRANCH_NAME]</p>
+      <p>git checkout -b [BRANCH_NAME]</p>
+      <p></p>
     </div>
   </body>
 </html>
