--- a/Git.html
+++ b/Git.html
@@ -10,20 +10,29 @@
       <h1>Git</h1>
     </div>
     <div>
+      <h2>安裝git - Windows</h2>
+      <p>git官網:https://git-scm.com/download/win</p>
+      <p>然後開啟 Git Bash</p><br/>
+      <h2>設定git識別資料</h2>
+      <p>在你安裝 Git 後首先應該做的事是設定使用者名稱及電子郵件。</p>
+      <p>這一點非常重要，因為每次 Git 的提交會使用這些資訊，而且提交後不能再被修改。</p>
+      <p>git config --global user.name "[使用者名字]"</p>
+      <p>git config --global user.email "[電子信箱]"</p><br/>
       <h2>常用指令</h2>
-      <p>git init</p>
-      <p>git clone [URL]</p>
-      <p>git status</p>
-      <p>git add .</p>
-      <p>git commit -m "..."</p>
-      <p>git push</p>
-      <p>git pull</p>
-      <p>git push origin [BRANCH_NAME]</p>
+      <p>git init<br/>建立新的本地端儲存庫(Repository)</p>
+      <p>git clone [URL]</br>複製遠端的 Repository 檔案到本地端。</p>
+      <p>git status<br/>檢查本地端檔案異動狀態。</p>
+      <p>git add [檔案或資料夾]<br/>將指定的檔案(或資料夾)加入版本控制。用 git add . 可加入全部。</p>
+      <p>git commit -m "[修改內容]"<br/>提交(commit)目前的異動並透過 -m 參數設定摘要說明文字。</p>
+      <p>git push<br/>將本地端 Repository 的 commit 發佈到遠端。</p>
+      <p>git push origin [BRANCH_NAME]<br/>發佈至遠端指定的分支(Branch)。</p>
+      <p>git pull<br/>檔案抓取下來到自己的本地端。</p>
       <p>git branch</p>
       <p>git branch [BRANCH_NAME]</p>
       <p>git checkout [BRANCH_NAME]</p>
       <p>git checkout -b [BRANCH_NAME]</p>
-      <p></p>
+      <p>git branch -D [BRANCH_NAME]</p>
+      <p>git branch -m [OLD_BRANCH_NAME] [NEW_BRANCH_NAME]</p>
     </div>
   </body>
 </html>
