--- a/HTML_elements/elements.html
+++ b/HTML_elements/elements.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="zh-TW">
   <head>
     <meta charset="UTF-8" name="viewport" content="width=device-width,initial-scale=1.0"/>
-    <link rel="stylesheet" href="../note.css?v1.1.10" media="screen,projection"/>
+    <link rel="stylesheet" href="../notes.css?v1.2" media="screen,projection"/>
     <title>HTNL_elements</title>
   </head>
   <body>
