--- a/Invitation to Computer Science.html
+++ b/Invitation to Computer Science.html
@@ -1,13 +1,39 @@
-# Invitation to Computer Science
-  <h2>Chapter 1 <br>_ An Introduction to Computer Science</h2>
-    <h3>the definition of computer science</h3>
-      <p>
-      electronic device<br/>
-      資料(date) -> 資訊(information)</br/>
-      現代 -> 數位 / 早期 -> 類比(用高低頻，區分數位的資訊)<br/>
-      </p>
-  <h2>Chapter 4 <br>_ The Buliding Blocks: Binary Numbers, Boolean Logic, and Gates</h2>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="zh-TW">
+  <head>
+    <meta charset="UTF-8" name="viewport" content="width=device-width,initial-scale=1.0"/>
+    <link rel="stylesheet" href="./notes.css?v1.7" media="screen,projection"/>
+    <title>Invitation to Computer Science</title>
+  </head>
+  <body>
+    <div id="header">
+      <h1 style="display:inline-block;">Invitation to Computer Science</h1>
+      <a href="../notes/">回首頁</a>
+    </div>
+    <div class="callback"></div>
+    <div class="grid-container">
+        <div class="item1">
+          <ul>
+            <li><a href="#1">Chapter 1</a></li>
+            <li><a href="#2">Chapter 4</a></li>
+            <li><a href="#3">Chapter 5</a></li>
+            <li><a href="#4">Chapter 6</a></li>
+          </ul>
+        </div>
+        <div class="item2">
+          <h2 id="1">Chapter 1 <br>_ An Introduction to Computer Science</h2>
+          <h3>the definition of computer science</h3>
+          <p>
+            electronic device<br/>
+            資料(date) -> 資訊(information)</br/>
+            現代 -> 數位 / 早期 -> 類比(用高低頻，區分數位的資訊)<br/>
+          </p>
+          <h2 id="2">Chapter 4 <br>_ The Buliding Blocks: Binary Numbers, Boolean Logic, and Gates</h2>
 
-  <h2>Chapter 5 <br>_ Computer Systems Organization</h2>
+          <h2 id="3">Chapter 5 <br>_ Computer Systems Organization</h2>
 
-  <h2>Chapter 6 <br>_ An Introduction to System Software and Virtual Machines</h2>
+          <h2 id="4">Chapter 6 <br>_ An Introduction to System Software and Virtual Machines</h2>
+        </div>
+      </div>
+  </body>
+</html>
