Update notes.css to add bar

--- a/Date Communications and Networking/Introduction.html
+++ b/Date Communications and Networking/Introduction.html
@@ -2,11 +2,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="zh-TW">
   <head>
     <meta charset="UTF-8" name="viewport" content="width=device-width,initial-scale=1.0"/>
-    <link rel="stylesheet" href="../notes.css?v1.7" media="screen,projection"/>
+    <link rel="stylesheet" href="../notes.css?v1.13" media="screen,projection"/>
     <title>Date Communications and Networking</title>
   </head>
   <body>
-    <div id="header">
+    <div id="header" class="back">
       <h1 style="display:inline-block;">Date Communications and Networking</h1>
       <a href="../../notes/">回首頁</a>
     </div>
