--- a/HTML/HTML.html
+++ b/HTML/HTML.html
@@ -5,7 +5,7 @@
 <p>頁面結構</p>
 <p>HTML開頭</p>
 <p>關於&lt;html&gt;標籤</p>
-<a href="./HTML_elements/elements.html">元素介紹</a>
+<a href="./elements.html">元素介紹</a>
 <br/>
 
 <h2>介紹</h2>
