--- a/Date Communications and Networking/Introduction.html
+++ b/Date Communications and Networking/Introduction.html
@@ -11,17 +11,18 @@
       <a href="../../notes/">回首頁</a>
     </div>
     <div class="callback"></div>
-    <div class="leave_blank"></div>
     <div class="grid-container">
         <div class="item1">
           <ul>
+            <hr/>
             <li><a class="active" href="./Introduction.html">Chapter 1</a></li>
-            <li><a href="#1.1">1.1 Data Communications</a></li>
-            <li><a href="#1.2">1.2 Networks</a></li>
-            <li><a href="#1.3">1.3 Network Types</a></li>
-            <li><a href="#1.4">1.4 Internet History</a></li>
-            <li><a href="#1.5">1.5 Standards and Administration</a></li>
-            <li><a href="./Headings.html">Chapter 2</a></li>
+            <li><a href="#1.1" style="border-radius: 0px; margin: 0px 10px;">1.1 Data Communications</a></li>
+            <li><a href="#1.2" style="border-radius: 0px; margin: 0px 10px;">1.2 Networks</a></li>
+            <li><a href="#1.3" style="border-radius: 0px; margin: 0px 10px;">1.3 Network Types</a></li>
+            <li><a href="#1.4" style="border-radius: 0px; margin: 0px 10px;">1.4 Internet History</a></li>
+            <li><a href="#1.5" style="border-radius: 0px; margin: 0px 10px 10px 10px;">1.5 Standards and Administration</a></li>
+            <hr/>
+            <li><a href="./Network Models.html">Chapter 2</a></li>
             <li><a href="./Paragraphs.html">Chapter 3</a></li>
             <li><a href="./TextFormatting.html">Chapter 4</a></li>
             <li><a href="./Links.html">Chapter 5</a></li>
@@ -34,7 +35,9 @@
         <div class="item2">
             <h2>Chapter 1_Introduction</h2>
         </div>
-        <div class="item2" id="1.1">
+        <div id="1.1"></div>
+        <div class="item2">
+          <br/>
             <h3>1.1 Data Communications</h3>
             <h4>Components</h4>
             <p>
@@ -62,7 +65,9 @@
               </ul>
             </p>
         </div>
-        <div class="item2" id="1.2">
+        <div id="1.2"></div>
+        <div class="item2">
+          <br/>
             <h3>1.2 Networks</h3>
             <p>
               A network is the interconnection of a set of devices capable of communication.<br/>
@@ -128,7 +133,9 @@
               </ul>
             </p>
         </div>
-        <div class="item2" id="1.3">
+        <div id="1.3"></div>
+        <div class="item2">
+          <br/>
             <h3>1.3 Network Types</h3>
             <h4>Local Area Network</h4>
             <p>
@@ -179,14 +186,18 @@
               Backbones通常被稱為國際互聯網服務提供者;provider networks通常被稱為國家或區域ISP。
             </p>
         </div>
-        <div class="item2" id="1.4">
+        <div id="1.4"></div>
+        <div class="item2">
+          <br/>
             <h3>1.4 Internet History</h3>
             <h4>Birth of the Internet</h4>
             <p>
               1972年，Vint Cerf和Bob Kahn都是ARPANET核心團隊的一員，他們合作開展了他們所謂的互聯網專案。他們希望連結不同的網路，以便一個網路上的主機可以與另一個網路上的主機進行通信。
             </p>
         </div>
-        <div class="item2" id="1.5">
+        <div id="1.5"></div>
+        <div class="item2">
+          <br/>
             <h3>1.5 Standards and Administration</h3>
             <h4>Internet Standards</h4>
             <p>
@@ -210,7 +221,7 @@
               </ul>
             </p>
         </div>
+        <div id="footer"><p>If something wrong, please mail:hsingyuchen0212@gmail.com</p></div>
       </div>
-      <div class="leave_blank"></div>
   </body>
 </html>
