--- a/Java/Java.html
+++ b/Java/Java.html
@@ -2,32 +2,34 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="zh-TW">
   <head>
     <meta charset="UTF-8" name="viewport" content="width=device-width,initial-scale=1.0"/>
-    <link rel="stylesheet" href="../notes.css?v1.3" media="screen,projection"/>
-    <title>Java</title>
+    <link rel="stylesheet" href="../notes.css?v1.19" media="screen,projection"/>
+    <title>Data Communications and Networking</title>
   </head>
   <body>
-    <div id="header">
-      <h1>Java</h1>
+    <div id="header" class="back">
+      <h1 style="display:inline-block;">Data Communications and Networking</h1>
+      <a href="../../notes/">回首頁</a>
     </div>
+    <div class="callback"></div>
     <div class="grid-container">
-      <div class="item1">
-        <ul>
-          <li><a href="./introduction.html">Java_introduction</a></li>
-          <li><a href="./io.html">Java_i/o</a></li>
-          <li><a href="./variable.html">Java_variable</a></li>
-          <li><a href="./TextFormatting.html">HTML文本格式</a></li>
-          <li><a href="./Links.html">HTML鏈接</a></li>
-          <li><a href="./Images.html">HTML圖像</a></li>
-          <li><a href="./Tables.html">HTML表格</a></li>
-          <li><a href="./Lists.html">HTML列表</a></li>
-          <li><a href="./Froms.html">HTML表單</a></li>
-        </ul>
-      </div>
-      <div class="item2">
-        <h2>Java使用cmd編譯執行方式</h2>
-        <p>javac 檔案名稱.java</p>
-        <p>java 檔案名稱</p>
-      </div>
+        <div class="item1">
+          <ul>
+            <li><a href="./introduction.html">Java_introduction</a></li>
+            <li><a href="./io.html">Java_i/o</a></li>
+            <li><a href="./variable.html">Java_variable</a></li>
+            <li><a href="./TextFormatting.html">HTML文本格式</a></li>
+            <li><a href="./Links.html">HTML鏈接</a></li>
+            <li><a href="./Images.html">HTML圖像</a></li>
+            <li><a href="./Tables.html">HTML表格</a></li>
+            <li><a href="./Lists.html">HTML列表</a></li>
+            <li><a href="./Froms.html">HTML表單</a></li>
+          </ul>
+        </div>
+        <div class="item2">
+            <h2>Java使用cmd編譯執行方式</h2>
+            <p>javac 檔案名稱.java</p>
+            <p>java 檔案名稱</p>
+        </div>
     </div>
   </body>
 </html>
